litmask/tests/compile/mask_concat_empty.stderr
error: mask_concat! requires at least one argument
 --> tests/compile/mask_concat_empty.rs:6:21
  |
6 |     let _: String = mask_concat!();
  |                     ^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `mask_concat` (in Nightly builds, run with -Z macro-backtrace for more info)
